--- a/walloff_android/res/values/strings.xml
+++ b/walloff_android/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">walloff_android</string>
+    <string name="app_name">Walloff</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main_menu">MainMenuActivity</string>
@@ -25,9 +25,17 @@
 	<string name="create_lobby_tog_on">Yes</string>
     <string name="create_lobby_tog_off">No</string>
     <string name="lobby_view_count_down">0:00</string>
+    <string name="cred_store_title_content">You only need to enter this once!</string>
+    <string name="options_tag">Options</string>
+    <string name="single_tag">Singleplayer</string>
+    <string name="multi_tag">Multiplayer</string>
+    <string name="profile_tag">Profile</string>
+    <string name="home_tag">Home</string>
     
     <color name="Black">#000000</color>
+    <color name="Black_Transparent">#dd000000</color>
     <color name="White">#ffffff</color>
     <color name="Red">#ff0000</color>
+    <color name="TronBlue">#18cae6</color>
 	
 </resources>
